Fix the inability to put the cursor into the editor on iOS

--- a/src/main/resources/scss/app.scss
+++ b/src/main/resources/scss/app.scss
@@ -81,7 +81,7 @@ html { -webkit-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; }
 	-webkit-tap-highlight-color: rgba(0,0,0,0) !important;
 }
 
-*:not(input):not(textarea) {
+*:not(input):not(textarea):not([contenteditable]) {
 	-webkit-touch-callout: none;
 	//We only want specifc parts to be selectible.
 	-webkit-user-select: none;
@@ -90,6 +90,15 @@ html { -webkit-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; }
 	-o-user-select: none;
 	user-select: none;
 }
+
+[contenteditable] * {
+	-webkit-user-select: text !important;
+	-moz-user-select: text !important;
+	-ms-user-select: text !important;
+	-o-user-select: text !important;
+	user-select: text !important;
+}
+
 
 .button, input[type=button], input[type=submit], input[type=reset], button {
 	@include input-typography;
